Merged: [inspector] An Error with no stack description should not be empty

Revision: defbef78d23186c04fb0f6c741f5907d5a894766

BUG=chromium:919292
LOG=N
NOTRY=true
NOPRESUBMIT=true
NOTREECHECKS=true
R=dgozman@chromium.org

Change-Id: Idd2b1d02726f099446e2f83629c255c434113e62
Reviewed-on: https://chromium-review.googlesource.com/c/1427161
Reviewed-by: Dmitry Gozman <dgozman@chromium.org>
Cr-Commit-Position: refs/branch-heads/7.2@{#43}
Cr-Branched-From: 6acd03c9b8a8232aee95f25fbf6ae822aaedae75-refs/heads/7.2.502@{#1}
Cr-Branched-From: b03041de094610ef24e0e4fb6bf4c700fa1553ed-refs/heads/master@{#57910}