test/inspector/runtime/remote-object.js
@@ -414,6 +414,11 @@ InspectorTest.runAsyncTestSuite([
       returnByValue: true
     })).result);
   },
+  async function testCustomError() {
+    InspectorTest.logMessage((await evaluate({
+      expression: `class CustomError extends Error {}; a = new CustomError(); delete a.stack; a`
+    })).result);
+  },
   async function testProxy() {
     InspectorTest.logMessage((await evaluate({
       expression: 'new Proxy({}, {})'
